# TRE-server

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  server.py
.github/: auto_assign.yml  dependabot.yml
.github/actions/setup-test-image/: action.yml
.github/workflows/: auto-assign.yml  unittest.yml
app/: exceptions.py  log.py  main.py
app/model/schema/: __init__.py  key.py
app/routers/: key.py
app/utils/: docs_utils.py  fastapi_utils.py
docs/: TRE-server.yaml  generate_openapi_doc.py
examples/E-Quality/: e-quality-workflow.py  sample_result.md
examples/TRE/: simple_tre_enc_dec.py
sandbox/multiple-TRE/: RESULTS.md  multiple_tre_sample.py
sandbox/single-TRE/: RESULTS.md  single_tre_sample.py
tests/: Dockerfile_unittest  conftest.py  qa.sh
tests/app/: test_key_GetPublicKey.py  test_key_GetTimeKey.py
tests/multiple-TRE/: sample_result.md  test_multiple_tre.py
tests/single-TRE/: sample_result.md  test_single_tre.py
