[project]
name = "MTRC"
version = "0.1"
description = "Multiple Time-Release Cryptography service"
authors = [
    {name = "BOOSTRY Co., Ltd.", email = "dev@boostry.co.jp"},
]
license = {text = ""}
readme = "README.md"
requires-python = "==3.11.10"
dependencies = [
    "py_ecc~=7.0.0",
    "pycryptodome~=3.20",
    "web3~=6.15.1",
    "coincurve~=19.0.1",
    "pydantic~=2.10.3",
]

[tool.uv]
dev-dependencies = [
    "pytest<9.0.0,>=8.3.2",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-asyncio==0.23.8",
    "pytest-aiohttp<2.0.0,>=1.0.5",
    "pre-commit<4.0.0,>=3.6.0",
    "ruff<1.0.0,>=0.5.4",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [".venv/*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
exclude = []

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
# E: pycodestyle
# F: Pyflakes
select = ["E", "F"]
# UP042: Checks for classes that inherit from both str and enum.Enum
extend-select = ["UP042"]
# E711: Comparison to `None` should be `cond is None`
# E712: Avoid equality comparisons to False
# E721: Use is and is not for type comparisons, or isinstance() for isinstance checks
# E722: Do not use bare except
# E402: Module level import not at top of file
# E731: Do not assign a lambda expression, use a def
# E501: Line too long (trust formatter)
ignore = ["E402", "E711", "E712", "E721", "E722", "E731", "E501"]
exclude = ["migrations/*"]

[tool.ruff.lint.extend-per-file-ignores]
# F401 [*] xxx imported but unused
# F403 from .main import * used; unable to detect undefined names
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "-m 'not alembic'"
markers = [
    "alembic: tests for alembic",
]

[tool.coverage.run]
branch = true
concurrency = ["thread", "greenlet"]
include = []
